<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".views.activities.SignupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mToolbar" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/email_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/mobile_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/username_editText"
        app:layout_constraintVertical_chainStyle="packed"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="highlight"
        app:met_helperTextColor="@color/white"
        app:met_primaryColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/white" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/mobile_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password_ediText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/email_editText"
        app:layout_constraintVertical_chainStyle="packed"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="highlight"
        app:met_helperTextColor="@color/white"
        app:met_primaryColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/white" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/username_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/email_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="highlight"
        app:met_helperTextColor="@color/white"
        app:met_primaryColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/white" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password_ediText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_editText"
        app:layout_constraintTop_toBottomOf="@+id/mobile_editText"
        app:met_baseColor="@color/white"
        app:met_floatingLabel="highlight"
        app:met_helperTextColor="@color/white"
        app:met_primaryColor="@color/white"
        app:met_textColorHint="@color/white"
        app:met_underlineColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_borders"
        android:text="@string/login_no_dot"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_ediText"
        app:layout_constraintStart_toStartOf="@+id/password_ediText"
        app:layout_constraintTop_toBottomOf="@+id/password_ediText" />

</android.support.constraint.ConstraintLayout>